# wallet_server

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  docker-compose.yml  dockerfile  sample_bench.sh
migration/: Cargo.toml
migration/src/: lib.rs  m20240816_021302_crate_wallet_source_table.rs  m20240816_054942_create_user_wallet_table.rs  m20240816_060441_create_wallet_transaction_table.rs  m20240816_061738_create_rollover_main_table.rs  m20240816_062915_crate_rollover_record_table.rs
src/: main.rs
src/application/: mod.rs
src/application/dto/: mod.rs
src/application/dto/common/: domain_trait.rs  mod.rs  proto_trait.rs  wallet_mapper.rs
src/application/dto/game_wallet/: mod.rs  proto_impl.rs
src/application/dto/user_wallet/: domain_impl.rs  mod.rs  proto_impl.rs  query_mapper.rs
src/application/service/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/domain/aggregate/: mod.rs  user_wallet.rs
src/domain/entity/: mod.rs  rollover_main.rs  rollover_record.rs  user_wallet.rs  wallet_source.rs  wallet_transaction.rs
src/domain/repository/: mod.rs  rollover_main.rs  rollover_record.rs  user_wallet.rs  wallet_source.rs  wallet_transaction.rs
src/domain/service/: currency.rs  mod.rs  rollover.rs  wallet_service.rs
src/domain/vo/: wallet.rs
src/enums/: currency.rs  mod.rs  rollover.rs  wallet_action.rs  wallet_source.rs  wallet_status.rs
src/infrastructure/: mod.rs  snowflake.rs  transaction_manager.rs
src/infrastructure/bank_server/: client_currency_grpc.rs  currency_grpc.rs  mod.rs
src/interface/: game_wallet.rs  mod.rs  player_wallet.rs
(+20 files in other folders)
