[package]
name = "wallet_grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration"]


[dependencies]
# database-manager = { git = "http://gitlab.kgs.asia/rust_lib/database-manager.git", branch = "master" }
database-manager = {path = "/Users/jason/kgs_lib/database-manager"}
kgs-err = { git = "http://gitlab.kgs.asia/rust_lib/kgs-err.git", branch = "feature/payment_rollover" }
rabbitmq_manager = { git = "http://gitlab.kgs.asia/rust_lib/rabbitmq-manager.git", branch = "master" }
protos = { git = "http://gitlab.kgs.asia/rust_lib/protos.git", branch = "feature/payment_rollover" }
kgs-tracing = { git = "http://gitlab.kgs.asia/rust_lib/kgs-tracing.git", branch = "master" }


once_cell = "1.19.0"                                                   # for config
derive_more = "0.99.17"
strum = { version = "0.26.1", features = ["derive"] }
async-trait = "0.1.53"
tokio = { version = "1.19", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
tonic-types = "0.11.0"
dotenv = "0.15.0"
envy = "0.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
phonenumber = { version = "0.3.3" }
email_address = { version = "0.2.4" }
rs-snowflake = { version = "0.6.0" }
serde_json = { version = "1.0.108", features = [] }
serde = { version = "1.0", features = ["derive"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
sea-orm = "1.0.0"
